[package]
name = "synchronizer"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.0"
actix-http = "3.3.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
env_logger = "0.10.0"

mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }
once_cell = {version = "1.17.0"}
serde_json = "1.0.93"
serde = {version = "1.0.152", features = ["derive"] }
futures = "0.3.26"

tokio = { version = "1.25.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }

tonic = { version = "0.8.3", features = ["transport","channel"] }
prost = { version = "0.11.5"}

[build-dependencies]
tonic-build = "0.8.4"
prost-build = "0.11.5"